SB-27: Add offline Google Analytics support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,15 @@ services:
     links:
       - db
 
+  node:
+    image: node:8
+    working_dir: /src
+    command: /bin/true
+    volumes:
+      - ~/.npm:/.npm
+    volumes_from:
+      - appdata
+
   db:
     image: mariadb:10
     ports:
