--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:clean": "rm -rf src/view/frontend/web/js/lib/*",
-    "build:copy": "find node_modules/workbox-google-analytics -name 'workbox-google-analytics.prod.*' -exec install -t src/view/frontend/web/js/lib {} +",
+    "build:copy": "find node_modules -path '*/importScripts/*' -name '*.prod.*' -exec install -t src/view/frontend/web/js/lib {} +",
     "build": "npm run build:clean && npm run build:copy"
   },
   "repository": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/meanbee/magento2-serviceworker#readme",
   "dependencies": {
-    "workbox-google-analytics": "^1.0.0"
+    "workbox-google-analytics": "^1.0.0",
+    "workbox-sw": "^1.0.1"
   }
 }
