--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,12 @@
       "email": "tomas.gerulaitis@meanbee.com"
     }
   ],
+  "repositories": {
+    "magento": {
+      "type": "composer",
+      "url": "https://repo.magento.com/"
+    }
+  },
   "require": {
     "magento/framework": "^103.0.0",
     "magento/module-backend": "^100.1.1",
