--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
     }
   },
   "require": {
-    "magento/framework": "^103.0.0",
-    "magento/module-backend": "^100.1.1",
-    "magento/module-config": "^101.0.0",
-    "magento/module-cms": "^102.0.0"
+    "magento/framework": "^103.0.*",
+    "magento/module-backend": "^102.0.*",
+    "magento/module-config": "^101.2.*",
+    "magento/module-cms": "^104.0.*"
   },
   "autoload": {
     "files": [
