--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "meanbee/magento2-serviceworker",
   "description": "A Magento 2 extension that adds Service Worker support.",
   "type": "magento2-module",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "license": [
     "MIT"
   ],
@@ -10,6 +10,10 @@
     {
       "name": "Tomas Gerulaitis",
       "email": "tomas.gerulaitis@meanbee.com"
+    },
+    {
+      "name": "Bruno Elisei",
+      "email": "brunoelisei@o2ti.com"
     }
   ],
   "repositories": {
@@ -19,10 +23,10 @@
     }
   },
   "require": {
-    "magento/framework": "^101.0.0",
-    "magento/module-backend": "^100.1.1",
-    "magento/module-config": "^101.0.0",
-    "magento/module-cms": "^102.0.0"
+    "magento/framework": ">=^101.0.0",
+    "magento/module-backend": ">=^100.1.1",
+    "magento/module-config": ">=^101.0.0",
+    "magento/module-cms": ">=^102.0.0"
   },
   "autoload": {
     "files": [
